# shell

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  Cargo.toml  MIGRATION_TO_RUST.md  README.md  shell.qml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: feature.yml  issue.yml
.github/workflows/: ci.yml  release.yml
assets/: wrap_term_launch.sh
assets/pam.d/: passwd
components/: Anim.qml  CAnim.qml  MaterialIcon.qml  StateLayer.qml  StyledClippingRect.qml  StyledRect.qml  StyledText.qml
components/containers/: StyledFlickable.qml  StyledListView.qml  StyledWindow.qml
components/controls/: CircularProgress.qml  CustomMouseArea.qml  CustomSpinBox.qml  FilledSlider.qml  StyledBusyIndicator.qml  StyledRadioButton.qml  (+4 more)
config/: Appearance.qml  AppearanceConfig.qml  BackgroundConfig.qml  BarConfig.qml  BorderConfig.qml  Config.qml  ControlCenterConfig.qml  DashboardConfig.qml  GeneralConfig.qml  LauncherConfig.qml  LockConfig.qml  NotifsConfig.qml  OsdConfig.qml  ServiceConfig.qml  SessionConfig.qml  UserPaths.qml  WInfoConfig.qml
modules/: Shortcuts.qml
plugin/vela_plugin/: Cargo.toml  build.rs
plugin/vela_plugin/src/: app_entry.rs  appdb.rs  audio_collector.rs  cutils.rs  lib.rs  qalculator.rs  service.rs  service_ref.rs
services/: Audio.qml  Brightness.qml  ColorHandler.qml  Colors.qml  Hypr.qml  IdelInhibitor.qml  Network.qml  Notifs.qml  Players.qml  Requests.qml  SystemUsage.qml  Time.qml  Visibilities.qml  Wallpapers.qml  Weather.qml
shell-core/: Cargo.toml
utils/: Icons.qml  Images.qml  Paths.qml  Searcher.qml  SysInfo.qml
(+148 files in other folders)
