[package]
name = "vela_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cxx = "1"
cxx-qt = { version = "0.7.2", features = ["qt6", "qml"] }
image = "0.25.8"
color-thief = "0.2.2"
evalexpr = "12.0.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
pipewire = "0.9.2"
crossbeam-channel = "0.5"